--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,3 +56,6 @@ select {
     scroll-behavior: auto !important;
   }
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
