--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,61 +1,124 @@
 /* A Modern CSS Reset */
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-body,
-h1,
-h2,
-h3,
-h4,
-p,
-figure,
-blockquote,
-dl,
-dd {
-  margin: 0;
-}
-ul[role='list'],
-ol[role='list'] {
-  list-style: none;
-}
-html:focus-within {
-  scroll-behavior: smooth;
-}
-body {
-  min-height: 100vh;
-  text-rendering: optimizeSpeed;
-  line-height: 1.5;
-}
-a:not([class]) {
-  text-decoration-skip-ink: auto;
-}
-img,
-picture {
-  max-width: 100%;
-  display: block;
-}
-input,
-button,
-textarea,
-select {
-  font: inherit;
-}
-@media (prefers-reduced-motion: reduce) {
-  html:focus-within {
-    scroll-behavior: auto;
-  }
-  *,
-  *::before,
-  *::after {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
-  }
+:root {
+  --base-color: #191919;
+  --sub-color: #484646;
+  --base-background: white;
+  --sub-background: #f2f1f1;
+  --base-outline: 0, 0, 0, 0.12;
+  --base-placeholder: 0, 0, 0, 0.4;
+  --card-gradient: linear-gradient(-70deg, #a2facf 0%, #64acff 100%);
+  --header-gradient: linear-gradient(-70deg, #28d17e 0%, #2685f3 100%);
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+:root.dark {
+  --base-color: #bdc1c6;
+  --sub-color: #a1a4a8;
+  --base-background: #202124;
+  --sub-background: #2d2e31;
+  --base-outline: 255, 255, 255, 0.12;
+  --base-placeholder: 255, 255, 255, 0.4;
+  --card-gradient: linear-gradient(
+    145deg,
+    rgba(64, 58, 58, 1) 0%,
+    rgba(49, 49, 55, 1) 100%
+  );
+  --header-gradient: linear-gradient(
+    145deg,
+    rgba(64, 58, 58, 1) 0%,
+    rgba(49, 49, 55, 1) 100%
+  );
+}
+
+// *,
+// *::before,
+// *::after {
+//   box-sizing: border-box;
+// }
+// body,
+// h1,
+// h2,
+// h3,
+// h4,
+// p,
+// figure,
+// blockquote,
+// dl,
+// dd {
+//   margin: 0;
+// }
+// ul[role='list'],
+// ol[role='list'] {
+//   list-style: none;
+// }
+// html:focus-within {
+//   scroll-behavior: smooth;
+// }
+// body {
+//   min-height: 100vh;
+//   text-rendering: optimizeSpeed;
+//   line-height: 1.5;
+// }
+// a:not([class]) {
+//   text-decoration-skip-ink: auto;
+// }
+// img,
+// picture {
+//   max-width: 100%;
+//   display: block;
+// }
+// input,
+// button,
+// textarea,
+// select {
+//   font: inherit;
+// }
+// @media (prefers-reduced-motion: reduce) {
+//   html:focus-within {
+//     scroll-behavior: auto;
+//   }
+//   *,
+//   *::before,
+//   *::after {
+//     animation-duration: 0.01ms !important;
+//     animation-iteration-count: 1 !important;
+//     transition-duration: 0.01ms !important;
+//     scroll-behavior: auto !important;
+//   }
+// }
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+  background-color: var(--base-background);
+  color: var(--base-color);
+}
+
+.mat-form-field-appearance-outline .mat-form-field-outline {
+  color: rgba(var(--base-outline));
+}
+.mat-input-element::placeholder {
+  color: rgba(var(--base-placeholder));
+}
+.mat-form-field .mat-form-field-label {
+  color: rgba(var(--base-placeholder));
+}
+.mat-card {
+  color: var(--base-color);
+}
+.mat-card-subtitle {
+  color: var(--sub-color);
+}
+.mat-select-min-line,
+.mat-select-arrow {
+  color: var(--base-color);
+}
+.container {
+  padding: 0 16px;
+  max-width: 600px;
+  margin: 0 auto;
+}
