--- a/src/app/parts/footer/footer.component.html
+++ b/src/app/parts/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer class="footer">
-  <p class="footer__copyright">Copyright © 生活計算帳 All Rights Reserved.</p>
+  <p class="footer__copyright">Copyright © {{ title }} All Rights Reserved.</p>
 </footer>
