--- a/src/app/pages/trip/trip.component.scss
+++ b/src/app/pages/trip/trip.component.scss
@@ -13,6 +13,10 @@
   &__radio {
     margin-right: 20px;
   }
+
+  &__section {
+    margin-top: 80px;
+  }
 }
 
 .calc-area {
@@ -20,10 +24,15 @@
   padding: 40px 24px;
   background-color: var(--sub-background);
   border-radius: 8px;
-  &__text + &__text {
-    margin-top: 24px;
+  &__text {
+    margin-bottom: 24px;
   }
   &__total {
     font-size: 2rem;
+  }
+  &__title {
+    font-size: 1.6rem;
+    text-align: center;
+    margin-bottom: 40px;
   }
 }
