--- a/src/app/parts/header/header.component.scss
+++ b/src/app/parts/header/header.component.scss
@@ -2,7 +2,7 @@
   background: var(--header-gradient);
   &__title {
     margin: 0 auto;
-    font-family: 'Noto Serif JP', serif;
+    font-size: 1rem;
 
     &--small {
       font-size: 1rem;
