--- a/src/app/pages/trip/trip.component.scss
+++ b/src/app/pages/trip/trip.component.scss
@@ -17,6 +17,15 @@
   &__section {
     margin-top: 80px;
   }
+
+  &__counter {
+    display: flex;
+    align-items: center;
+
+    & > span {
+      margin-right: 12px;
+    }
+  }
 }
 
 .calc-area {
