--- a/src/app/pages/trip/trip.component.scss
+++ b/src/app/pages/trip/trip.component.scss
@@ -1,4 +1,5 @@
 .trip {
+  font-size: 1.2rem;
   padding-top: 40px;
   &__block {
     display: flex;
@@ -16,6 +17,7 @@
 
   &__section {
     margin-top: 80px;
+    font-size: 1rem;
   }
 
   &__counter {
@@ -26,9 +28,14 @@
       margin-right: 12px;
     }
   }
+
+  &__traffic {
+    font-size: 1rem;
+  }
 }
 
 .calc-area {
+  font-size: 1rem;
   margin-top: 60px;
   padding: 40px 24px;
   background-color: var(--sub-background);
