--- a/src/app/pages/trip/trip.component.html
+++ b/src/app/pages/trip/trip.component.html
@@ -99,11 +99,13 @@
         >円分お得です！
       </p>
     </div>
-    <section class="trip__section">
+    <section class="section">
       <h2 class="title-lg">全国旅行割とは?</h2>
+      <p>国内旅行代金の40%が割引されるキャンペーン。</p>
       <p>
-        国内旅行代金の40%が割引されるキャンペーン。
         交通付旅行は1泊あたり最大8,000円、その他の旅行商品は最大5,000円が割引される。
+      </p>
+      <p>
         さらに飲食店等で利用できるクーポン券を平日は1人1泊3,000円分、休日は1人1泊1,000円分配布。
       </p>
       <ul>
