--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,70 +31,6 @@
     rgba(49, 49, 55, 1) 100%
   );
 }
-.layout {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  .main {
-    flex: 1;
-  }
-}
-// *,
-// *::before,
-// *::after {
-//   box-sizing: border-box;
-// }
-// body,
-// h1,
-// h2,
-// h3,
-// h4,
-// p,
-// figure,
-// blockquote,
-// dl,
-// dd {
-//   margin: 0;
-// }
-// ul[role='list'],
-// ol[role='list'] {
-//   list-style: none;
-// }
-// html:focus-within {
-//   scroll-behavior: smooth;
-// }
-// body {
-//   min-height: 100vh;
-//   text-rendering: optimizeSpeed;
-//   line-height: 1.5;
-// }
-// a:not([class]) {
-//   text-decoration-skip-ink: auto;
-// }
-// img,
-// picture {
-//   max-width: 100%;
-//   display: block;
-// }
-// input,
-// button,
-// textarea,
-// select {
-//   font: inherit;
-// }
-// @media (prefers-reduced-motion: reduce) {
-//   html:focus-within {
-//     scroll-behavior: auto;
-//   }
-//   *,
-//   *::before,
-//   *::after {
-//     animation-duration: 0.01ms !important;
-//     animation-iteration-count: 1 !important;
-//     transition-duration: 0.01ms !important;
-//     scroll-behavior: auto !important;
-//   }
-// }
 
 html {
   touch-action: manipulation;
@@ -111,6 +47,14 @@ body {
   overflow-y: scroll;
 }
 
+.layout {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  .main {
+    flex: 1;
+  }
+}
 .mat-form-field-appearance-outline .mat-form-field-outline {
   color: rgba(var(--base-outline));
 }
@@ -170,4 +114,9 @@ input.mat-input-element {
     text-align: center;
     margin-bottom: 40px !important;
   }
+}
+
+.section {
+  margin-top: 80px;
+  font-size: 1rem;
 }
