--- a/src/app/pages/income/income.component.scss
+++ b/src/app/pages/income/income.component.scss
@@ -1,5 +1,8 @@
 .income {
   padding-top: 60px;
+  &__label {
+    margin-top: 24px;
+  }
   table {
     width: 100%;
     background-color: var(--base-background);
