--- a/src/app/pages/residents/residents.component.scss
+++ b/src/app/pages/residents/residents.component.scss
@@ -1,5 +1,10 @@
 .residents {
   padding-top: 60px;
+
+  &__label {
+    margin-top: 24px;
+  }
+
   table {
     width: 100%;
     background-color: var(--base-background);
