--- a/src/app/pages/income/income.component.html
+++ b/src/app/pages/income/income.component.html
@@ -64,6 +64,7 @@
         <li>課税所得金額</li>
         <li>所得税額</li>
       </ol>
+      <p>※実際の税額とは異なる場合があります。目安としてご利用ください。</p>
     </section>
   </div>
 </div>
