--- a/src/app/pages/residents/residents.component.html
+++ b/src/app/pages/residents/residents.component.html
@@ -60,6 +60,7 @@
         住民税とは都道府県や市区町村が行なっている行政サービスを維持するために支払う税金です。
       </p>
       <p>住民税の計算方法は課税所得に対して10%の金額となります。</p>
+      <p>※実際の税額とは異なる場合があります。目安としてご利用ください。</p>
     </section>
   </div>
 </div>
