--- a/src/app/pages/residents/residents.component.scss
+++ b/src/app/pages/residents/residents.component.scss
@@ -1,6 +1,4 @@
 .residents {
-  padding-top: 60px;
-
   &__label {
     margin-top: 24px;
   }
@@ -20,4 +18,8 @@
       color: var(--base-color);
     }
   }
+}
+
+.auto-button {
+  margin-left: 24px;
 }
