--- a/src/app/parts/top-card/top-card.component.html
+++ b/src/app/parts/top-card/top-card.component.html
@@ -1,7 +1,7 @@
 <mat-card class="card gradient-bg" [routerLink]="item.link">
   <mat-card-title-group>
     <mat-card-title class="card__title" [title]="item.title">{{
-      item.title | threePointLeader: 14
+      item.title
     }}</mat-card-title>
     <!-- <mat-card-subtitle class="card__subtitle">{{
       item.category | categoryType
