和暦・西暦　早見表

--- a/src/app/pages/income/income.component.html
+++ b/src/app/pages/income/income.component.html
@@ -31,7 +31,7 @@
       <span matSuffix>円</span>
     </mat-form-field>
     <div class="income__table">
-      <table>
+      <table class="table">
         <tr>
           <th>所得控除額</th>
           <td>{{ otherDeduction$ | async | number }}円</td>
