--- a/src/styles.scss
+++ b/src/styles.scss
@@ -124,3 +124,19 @@ input.mat-input-element {
 .page {
   padding-top: 60px;
 }
+
+.table {
+  width: 100%;
+  background-color: var(--base-background);
+  border-collapse: collapse;
+  th {
+    font-weight: normal;
+  }
+  th,
+  td {
+    padding: 12px;
+    border: solid 1px var(--base-border);
+    text-align: left;
+    color: var(--base-color);
+  }
+}
