--- a/src/app/pages/residents/residents.component.html
+++ b/src/app/pages/residents/residents.component.html
@@ -31,7 +31,7 @@
       <span matSuffix>円</span>
     </mat-form-field>
     <div class="residents__table">
-      <table>
+      <table class="table">
         <tr>
           <th>所得控除額</th>
           <td>{{ (otherDeduction$ | async | number) || 0 }}円</td>
