--- a/src/app/pages/vegetable/vegetable.component.html
+++ b/src/app/pages/vegetable/vegetable.component.html
@@ -18,7 +18,7 @@
       </table>
     </div>
     <section class="section">
-      <h2 class="title-lg">早見表について</h2>
+      <h2 class="title-lg">保存方法について</h2>
       <p>
         基本的に常温保存するものは直射日光は避け、風通しの良い場所に置きましょう。
       </p>
