--- a/src/app/parts/header/header.component.html
+++ b/src/app/parts/header/header.component.html
@@ -10,7 +10,8 @@
     }}</mat-icon>
   </button>
   <h1 class="header__title" [routerLink]="['/']">
-    {{ title }}
+    <span>ライフブック</span>
+    <img src="assets/icon/book.svg" width="24" height="24" alt="本のアイコン" />
   </h1>
   <!-- <button mat-icon-button (click)="openDialog('200ms', '200ms')">
     <mat-icon>edit</mat-icon>
