横スクロールを案内

--- a/src/app/pages/vegetable/vegetable.component.html
+++ b/src/app/pages/vegetable/vegetable.component.html
@@ -2,6 +2,7 @@
   <div class="container">
     <h2 class="vegetable__title">保存方法・期限　早見表</h2>
     <div class="vegetable__table">
+      <p>※ 横にスクロールできます</p>
       <table class="table">
         <tr>
           <th>種類</th>
